<resources>
    <string name="app_name">VaiAonde</string>
    <string name="font">sans-serif-condensed</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_exemplo_com">email@exemplo.com</string>
    <string name="senha">Senha</string>
    <string name="hintPassword">*********</string>
    <string name="entrar">ENTRAR</string>
    <string name="loginMsg">Novo por aqui?\nCadastre-se!</string>
    <string name="bem_vindo">Bem vindo!</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="hist_rico">Histórico</string>
    <string name="destino">Destino:</string>
    <string name="encerrar_viagem">Encerrar Viagem</string>
    <string name="gastos_com_refeicoes">Gastos com Refeições</string>
    <string name="gastos_com_hospedagem">Gastos com Hospedagem</string>
    <string name="gastos_com_gasolina">Gastos com Gasolina</string>
    <string name="gastos_com_aviao">Gastos com Avião</string>
    <string name="outros_gastos">Outros Gastos</string>
    <string name="voltar">Voltar</string>
    <string name="sao_paulo">São Paulo</string>
    <string name="dias_de_viagem">Dias de Viagem:</string>
    <string name="total_de_pessoas">Total de Pessoas:</string>
    <string name="salvar">Salvar</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="total_de_km">Total de Km:</string>
    <string name="media_por_litro">Média por litro</string>
    <string name="custo_por_litro">Custo por Litro</string>
    <string name="total_de_veiculos">Total de Veículos</string>
    <string name="_0">0</string>
    <string name="total">Total:</string>
    <string name="dinheiro">R$</string>
    <string name="custo_por_pessoa">Custo por Pessoa</string>
    <string name="aluguel_de_veiculo">Aluguel de Veículo</string>
    <string name="custo_por_refeicao">Custo por Refeição</string>
    <string name="refeicoes_por_dia">Refeições por dia</string>
    <string name="custo_por_noite">Custo por noite</string>
    <string name="total_de_noites">Total de noites</string>
    <string name="total_de_quartos">Total de quartos</string>
    <string name="apagar_viagem">Apagar Viagem</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="cadastroMsg">Já possui uma conta?\nEfetue Login</string>
    <string name="sair">Sair</string>
    <string name="descricao">Descrição</string>
    <string name="montanha_russa">Montanha Russa</string>
    <string name="apagar">Apagar</string>
    <string name="limpar">Limpar</string>
    <string name="gastos">Gastos</string>
    <string name="resumo">Resumo</string>
    <string name="editar_viagem">Editar Viagem</string>
    <string name="hospedagem_dinheiro">Hospedagem: R$</string>
    <string name="gasolina_dinheiro">Gasolina: R$</string>
    <string name="refeicoes_dinheiro">Refeições: R$</string>
    <string name="outros_gastos_dinheiro">Outros Gastos: R$</string>
    <string name="tarifas_aereas_dinheiro">Tarifas Aéreas: R$</string>
    <string name="total_dinheiro">Total: R$</string>
    <string name="total_por_pessoa_dinheiro">Total/Pessoa: R$</string>
    <string name="valor">Valor</string>
</resources>