<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtherActivity"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="40dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:fontFamily="@string/font"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/txtDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/montanha_russa"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:fontFamily="@string/font"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/txtValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font"
        android:layout_marginHorizontal="15dp"
        android:inputType="numberDecimal"
        android:layout_marginBottom="30dp"
        android:hint="@string/_0"/>
    <Button
        android:id="@+id/btnLimpar"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpar"
        android:fontFamily="@string/font"
        android:backgroundTint="@color/primary"/>
    <Button
        android:id="@+id/btnSalvar"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:fontFamily="@string/font"
        android:backgroundTint="@color/primary"/>

    <Button
        android:id="@+id/btnApagar"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/apagar"
        android:fontFamily="@string/font"
        android:backgroundTint="@color/danger"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gastos"
        android:fontFamily="@string/font"
        android:textColor="@color/text"
        android:textSize="25sp"/>
    <ListView
        android:id="@+id/listGastosDiversos"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>
    <Button
    android:id="@+id/btnVoltar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:fontFamily="@string/font"
    android:backgroundTint="@color/primary"
    android:text="@string/voltar"/>
</LinearLayout>