<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp"
        android:background="@color/transparent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@string/font"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textAlignment="center"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/black"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="@string/font"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/email_exemplo_com"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:fontFamily="@string/font"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            app:dividerColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@string/font"
            android:layout_marginStart="15dp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font"
            android:layout_marginHorizontal="15dp"
            android:inputType="textPassword"
            android:hint="@string/hintPassword"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            app:dividerColor="@color/black"
            />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:textSize="20sp"
            android:backgroundTint="@color/primary"
            android:text="@string/entrar"
            android:fontFamily="@string/font"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/btnCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginMsg"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@string/font"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

</LinearLayout>