<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_weight="25"
            android:fontFamily="@string/font"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"/>
        <Button
            android:id="@+id/btnSair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sair"
            android:textSize="20sp"
            android:fontFamily="@string/font"
            android:backgroundTint="@color/danger"
            android:layout_weight="25"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnNovaViagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@string/font"
        android:text="@string/nova_viagem" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="@color/black"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minhas_viagens"
        android:fontFamily="@string/font"
        android:textColor="@color/text"
        android:textSize="25sp"/>


        <ListView
            android:id="@+id/viagensPendentes"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="@color/black"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hist_rico"
        android:fontFamily="@string/font"
        android:textColor="@color/text"
        android:textSize="25sp"/>

        <ListView
            android:id="@+id/viagensFinalizadas"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

</LinearLayout>