<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaneActivity"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="@string/font"
        android:layout_marginBottom="25dp"
        android:text="@string/gastos_com_aviao"
        android:textColor="@color/text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textSize="25sp"
            android:fontFamily="@string/font"
            android:textColor="@color/text"
            android:text="@string/custo_por_pessoa"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:textSize="25sp"
            android:fontFamily="@string/font"
            android:textColor="@color/text"
            android:textAlignment="textEnd"
            android:text="@string/dinheiro"/>
        <EditText
            android:id="@+id/txtCustoPessoa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/_0"
            android:textAlignment="center"
            android:inputType="numberDecimal"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textSize="25sp"
            android:fontFamily="@string/font"
            android:textColor="@color/text"
            android:text="@string/aluguel_de_veiculo"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:textSize="25sp"
            android:fontFamily="@string/font"
            android:textColor="@color/text"
            android:textAlignment="textEnd"
            android:text="@string/dinheiro"/>
        <EditText
            android:id="@+id/txtAluguel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/_0"
            android:textAlignment="center"
            android:inputType="numberDecimal"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:textSize="25sp"
            android:fontFamily="@string/font"
            android:textColor="@color/text"
            android:text="@string/total"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:textSize="25sp"
            android:fontFamily="@string/font"
            android:textColor="@color/text"
            android:textAlignment="textEnd"
            android:text="@string/dinheiro"/>
        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="0dp"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:fontFamily="@string/font"
            android:layout_height="wrap_content"
            android:layout_weight="30"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:textSize="20sp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@string/font"
            android:text="@string/voltar"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>
        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:textSize="20sp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@string/font"
            android:text="@string/salvar"/>
    </LinearLayout>

</LinearLayout>